log
Thu 09 Mar 2023 03:48:34 PM UTC: 
 tests:  0|7
total_score: 0/70
eb00d3e
Thu 09 Mar 2023 03:52:05 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:16:7: error: unused variable ‘s’ [-Werror=unused-variable]
   16 |   int s = *a;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
7b4c8a3
Thu 09 Mar 2023 03:52:14 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
5e1e1b2
Thu 09 Mar 2023 03:52:33 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
8e48630
Thu 09 Mar 2023 03:56:35 PM UTC: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|7
total_score: 0/70
1bb265d
Thu 09 Mar 2023 04:08:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c:1:2: error: stray ‘#’ in program
    1 | s#include <stdio.h>
      |  ^
exercises.c:1:1: error: unknown type name ‘s’
    1 | s#include <stdio.h>
      | ^
exercises.c:1:11: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | s#include <stdio.h>
      |           ^
Compilation failed
5824da8
Thu 09 Mar 2023 04:08:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
b577678
Thu 16 Mar 2023 03:23:11 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
f720515
Thu 16 Mar 2023 03:24:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:28:12: error: ‘INT_MAX’ undeclared (first use in this function)
   28 |     *min = INT_MAX;
      |            ^~~~~~~
exercises.c:6:1: note: ‘INT_MAX’ is defined in header ‘<limits.h>’; did you forget to ‘#include <limits.h>’?
    5 | #include <ctype.h>
  +++ |+#include <limits.h>
    6 | //#include "exercises.h"
exercises.c:28:12: note: each undeclared identifier is reported only once for each function it appears in
   28 |     *min = INT_MAX;
      |            ^~~~~~~
Compilation failed
68ed5bf
Thu 16 Mar 2023 03:25:54 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
03ef4ae
Thu 16 Mar 2023 03:26:15 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
7c3a013
Thu 16 Mar 2023 03:28:20 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  3|4
total_score: 30/70
5aea369
Thu 16 Mar 2023 03:29:51 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:82:52: error: expected ‘)’ before ‘;’ token
   82 |     Vector* v = (Vector*) malloc((n*sizeof(Vector));
      |                                                    ^
      |                                                    )
exercises.c:85:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   85 | }
      | ^
test.c:251:5: error: ‘main’ is normally a non-static function [-Werror=main]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:271:1: error: expected declaration or statement at end of input
  271 | }
      | ^
In file included from test.c:5:
exercises.c:82:13: error: unused variable ‘v’ [-Werror=unused-variable]
   82 |     Vector* v = (Vector*) malloc((n*sizeof(Vector));
      |             ^
test.c:271: error: control reaches end of non-void function [-Werror=return-type]
  271 | }
      | 
At top level:
test.c:251:5: error: ‘main’ defined but not used [-Werror=unused-function]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
1db4414
Thu 16 Mar 2023 03:30:13 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
200042e
Thu 16 Mar 2023 03:31:42 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:84:23: error: too few arguments to function ‘calloc’
   84 |     v->datos = (int*) calloc(n*sizeof(int*));
      |                       ^~~~~~
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:542:14: note: declared here
  542 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
Compilation failed
f629d5f
Thu 16 Mar 2023 03:33:32 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
467f229
Thu 16 Mar 2023 03:33:54 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|3
total_score: 40/70
5f8389d
Thu 16 Mar 2023 03:34:51 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
927e710
Thu 16 Mar 2023 03:35:56 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
417207a
